<resources>
    <string name="app_name">Art Space</string>
    <string name="artwork_description">Artwork image</string>

    <string name="artwork1_title">PC Firefly HSR Theme</string>
    <string name="artwork1_artist">Azra Fadhil Shadiq</string>

    <string name="artwork2_title">Acara Bukber Game Dev 2024</string>
    <string name="artwork2_artist">Anak Tua</string>

    <string name="artwork3_title">Makiatto GFL2</string>
    <string name="artwork3_artist">Sunborn</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>