<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/artwork_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/artwork_description"
        android:scaleType="centerCrop"
        android:src="@drawable/art1" />

    <TextView
        android:id="@+id/artwork_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/artwork1_title"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/artwork_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artwork1_artist"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>